# Aether

./: Dockerfile.proto  Makefile  README.md  docker-compose.yml
crawler/: Dockerfile  go.mod  go.sum
crawler/cmd/crawler/: main.go
crawler/internal/parser/: parser.go
crawler/internal/pb/: crawler.pb.go  crawler_grpc.pb.go
crawler/internal/queue/: queue.go
proto/: crawler.proto  inference.proto  search.proto
search_core/: CMakeLists.txt  Dockerfile
search_core/include/: bm25.hpp  hnsw.hpp
search_core/src/: bm25_index.cpp  hnsw_graph.cpp  server.cpp
search_core/src/pb/: crawler.grpc.pb.cc  crawler.grpc.pb.h  crawler.pb.cc  crawler.pb.h  search.grpc.pb.cc  search.grpc.pb.h  search.pb.cc  search.pb.h
vlm_engine/: CMakeLists.txt  Dockerfile
vlm_engine/include/: vlm_infer.hpp
vlm_engine/src/: kv_cache.cpp  model_loader.cpp  server.cpp
vlm_engine/src/pb/: inference.grpc.pb.cc  inference.grpc.pb.h  inference.pb.cc  inference.pb.h
web/: Dockerfile  next.config.js  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/search/: route.ts
web/lib/pb/: inference.ts  search.ts
